# Intro2024old

./: .gitignore  README.md  contributors.md  sycl-tutorial-extra.md
01-intro/: README.md  devcloud.md  introtosycl.ipynb  polaris.md  sycl-tutorial.ipynb
01-intro/examples/: 00-devices-platforms.ipynb  00-hello.ipynb  01-dot-product.ipynb  02-matrix-mult.ipynb  Intro.ipynb  README.md  dot_product.cpp  hello_world.cpp  matrixMul_solution.cpp  matrixMul_source.cpp  run-dot.sh
02-electrondensity/: 01-Intro-overview.ipynb  02-compile-execute.ipynb  03-kernels-1d.ipynb  03-kernels-3d.ipynb  03-kernels-cpu.ipynb  CMakeLists.txt  Overview.md  README.md  cleandir.sh  handleWF-Code-Review.md  sycl-tutorial.md
02-electrondensity/include/: Atom.hpp  Field.hpp  Lebedev.hpp  Promolecule.hpp  WaveFunction.hpp
02-electrondensity/src/: Atom.cpp  CMakeLists.txt  Field.cpp  Field.hpp  Lebedev.cpp  Promolecule.cpp  Rvector.cpp  Rvector.hpp  Timer.cpp  Timer.hpp  WaveFunction.cpp  WaveFunction.hpp  evaldensobj.xx  function1d.cpp  function1d.xx  function3d.cpp  function3d.xx  functioncpu.cpp  functioncpu.xx  functionold.xx  main.cpp  setGrid.hpp  version.hpp
03-marchingCubes/: MarchingCubes.ipynb
03-marchingCubes/CUDA/: Makefile  marchingCubes.cpp
03-marchingCubes/CUDA/Kernels/: classifyVoxel_kernel.cu  classifyVoxel_kernel.cuh  compactVoxels_kernel.cu  compactVoxels_kernel.cuh  generateTriangles_kernel.cu  generateTriangles_kernel.cuh
03-marchingCubes/SYCL/Kernels/: classifyVoxel_kernel.cpp  classifyVoxel_kernel.hpp  compactVoxels_kernel.cpp  compactVoxels_kernel.hpp  generateTriangles_kernel.cpp  (+1 more)
03-marchingCubes/src/: marchingCubes.cpp
04-sssp/: README.md
04-sssp/sssp/: README.md
examples/: README.md
sycl-tutorial/examples/: hello_world.cpp  matrixMul_solution.cpp  matrixMul_source.cpp
(+4 files in other folders)
